# superset-api-plus

./: .pre-commit-config.yaml  .pylintrc  .pypirc  CHANGELOG.md  MANIFEST.in  README.md  notes.txt  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: publishing.yaml  python-package.yaml
examples/: change_colors.py  export_dashboard.py  export_dataset.py  quickstart.py
requirements/: requirements-dev.txt  requirements-packaging.txt  requirements-testing.txt
supersetapiclient/: client.py  datasets.py  utils.py
supersetapiclient/base/: base.py
supersetapiclient/charts/: charts.py  echarts_timeseries_bar.py  filters.py  options.py  pie.py  queries.py  query_context.py  table.py  types.py
supersetapiplus/: __init__.py  assets.py  client.py  databases.py  datasets.py  exceptions.py  query_string.py  saved_queries.py  typing.py  utils.py
supersetapiplus/base/: base.py  datasource.py  fields.py  parse.py  types.py
supersetapiplus/charts/: charts.py  echarts_timeseries_bar.py  filters.py  metric.py  options.py  pie.py  pivot_table_v2.py  queries.py  query_context.py  table.py  types.py
supersetapiplus/dashboards/: dashboards.py  generate_graphviz.py  itemposition.py  metadata.py  metadataposition.py  nodeposisition.py  treenodeposisition.py
supersetapiplus/security/: CustomJwtSecurityManager.py  csrf.py  session_auth.py
supersetapiplus/utils/: dict_utils.py  helpers.py  request_handler.py
tests/: conftest.py
tests/integration/: test_basic.py
tests/security/: test_init.py
