[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superset-api-plus"
version = "1.0.0a1"
description = "A Python client for automating dashboards and charts in Apache Superset."
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
  { name = "COSINF/DIGTI/IFRN", email = "jailtoncarlos@gmail.com" }
]
requires-python = ">=3.7"
keywords = ["superset", "dashboard", "automation", "api", "client"]
dependencies = [
  "requests>=2.32.3",
  "requests-oauthlib>=2.0.0",
  "pyyaml>=6.0.2",
  "pandas>=2.2.3",
  "anytree>=2.12.1",
  "cached_property==2.0.1",
  "shortuuid>=1.0.13",
  "ordered-set>=4.1.0",
  "python-dotenv>=1.0.1"
]

[project.urls]
"Source Code" = "https://github.com/jailtoncarlos/superset-api-plus"
"Tracker" = "https://github.com/jailtoncarlos/superset-api-plus/issues"

[tool.black]
line-length = 127

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
line-length = 127
select = ["E", "F", "I", "UP", "B", "C", "W"]
exclude = ["tests/*"]
