[metadata]
name = superset-api-plus
version = 0.5.0
author = Jailton Paiva
author_email = jailtoncarlos@gmail.com
url = https://github.com/jailtoncarlos/superset-api-client
description = Uma API REST personalizada para o Apache Superset, derivada do opus-42/superset-api-client.
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
